--- a/blog-front/src/assets/base.css
+++ b/blog-front/src/assets/base.css
@@ -3,3 +3,17 @@ html,body {
   margin: 0;
   font-family: "Helvetica Neue",Helvetica,"PingFang SC","Hiragino Sans GB","Microsoft YaHei","微软雅黑",Arial,sans-serif;
 }
+#app {
+  height: 100%;
+  background-image: url('../assets/img/background1.jpg');
+  background-size: 100% auto;
+  opacity: 0.8;
+}
+
+.bg {
+  background: rgba(0, 0, 0, .8);
+  position: absolute;
+  width: 100%;
+  height: 100%;
+  z-index: -1000;
+}
